force-app/main/default/objects/Account/fields/Assessee_Code__c.field-meta.xml
<CustomField>
    <fullName>Assessee_Code__c</fullName>
    <label>Assessee Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>