force-app/main/default/objects/Account/fields/GST_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>GST_Registration_No__c</fullName>
    <label>GST Registration No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>