force-app/main/default/objects/Account/fields/GST_Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>GST_Vendor_Type__c</fullName>
    <label>GST Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>UnRegistered</fullName>
            </value>
            <value>
                <fullName>Composite</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Exempted</fullName>
            </value>
            <value>
                <fullName>SEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>