force-app/main/default/objects/Account/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <externalId>true</externalId>
    <label>Vendor No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>