force-app/main/default/objects/Account/fields/P_A_N_No__c.field-meta.xml
<CustomField>
    <fullName>P_A_N_No__c</fullName>
    <label>P.A.N. No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>