force-app/main/default/objects/Account/fields/P_A_N_Status__c.field-meta.xml
<CustomField>
    <fullName>P_A_N_Status__c</fullName>
    <label>P.A.N. Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAN APPLIED</fullName>
            </value>
            <value>
                <fullName>PANNOTAVBL</fullName>
            </value>
            <value>
                <fullName>PANINVALID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>