force-app/main/default/objects/Account/fields/PAN_Adhaar_Linking_Status__c.field-meta.xml
<CustomField>
    <fullName>PAN_Adhaar_Linking_Status__c</fullName>
    <label>PAN Adhaar Linking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes-Operative</fullName>
            </value>
            <value>
                <fullName>No-InOperative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>