force-app/main/default/objects/Account/fields/Payment_Method_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Code__c</fullName>
    <label>Payment Method Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>