force-app/main/default/objects/Account/fields/Payment_Terms_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Code__c</fullName>
    <label>Payment Terms Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>