force-app/main/default/objects/Account/fields/Responsibility_centre_Code__c.field-meta.xml
<CustomField>
    <fullName>Responsibility_centre_Code__c</fullName>
    <description>Responsibility centre Code</description>
    <externalId>true</externalId>
    <label>Responsibility centre Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>