force-app/main/default/objects/Account/fields/Responsibility_centre_Name__c.field-meta.xml
<CustomField>
    <fullName>Responsibility_centre_Name__c</fullName>
    <label>Responsibility centre Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>