force-app/main/default/objects/Account/fields/Supplier_Category__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Category__c</fullName>
    <label>Supplier Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSME Vendors</fullName>
            </value>
            <value>
                <fullName>Non-MSME Vendors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>