force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Company_Code__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Responsibility_centre_Code__c</columns>
    <columns>Responsibility_centre_Name__c</columns>
    <columns>State_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>