force-app/main/default/objects/Account/listViews/Company.listView-meta.xml
<ListView>
    <fullName>Company</fullName>
    <columns>Company_Code__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Company</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Company</label>
</ListView>