force-app/main/default/objects/Account/listViews/Vendor.listView-meta.xml
<ListView>
    <fullName>Vendor</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Vendor</value>
    </filters>
    <label>Vendor</label>
</ListView>